--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@
 }
 }
 
-.hero-bg{
+/* .hero-bg{
     background-image: url('src/assets/bg2.png');
+} */
+
+body{
+    background-color: #Fffae9;
 }
